--- a/Moduli4/index.html
+++ b/Moduli4/index.html
@@ -3,14 +3,42 @@
     <title>Moduli4</title>
   </head>
 <body>
-    <a href="https://digitalschool.eu/" target="_blank">Shkolla Digitale</a>
+    <!-- <a href="https://digitalschool.eu/" target="_blank">Shkolla Digitale</a>
     <br>
     <a href="contact.html">Contact</a>
     <img src="https://media.licdn.com/dms/image/v2/D4D0BAQFxlLq0otML2A
     /company-logo_200_200/company-logo_200_200/0/1698824469847/shkolladigjitale
     _logo?e=2147483647&v=beta&t=BkC2Kdv5lK8ogqt8boz-
     cr0OzNBhy15G5WSSkO4OQPw">
-    <img src="240320211616601562.png">
+    <img src="240320211616601562.png"> -->
+    
+
+
+    <a href="#heading_1">heading1</a>
+    <a href="#heading_2">heading2</a>
+    <a href="#heading_3">heading3</a>
+
+
+<h1 id="heading_1">Heading1</h1>
+<img src="images/1.png">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea deserunt, officiis adipisci rerum voluptatum obcaecati quam cum autem nostrum eveniet reiciendis
+vero tempore sequi magnam fugit dicta laborum earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cum aliquam ab, consequuntur corrupti quia tenetur excepturi voluptates a sint totam quos 
+unde magni sequi est natus deleniti nobis  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis laudantium, optio quas suscipit expedita iusto dolores at labore ab quaerat, libero voluptatem ipsum, molestias
+similique et earum cupiditate qui voluptate?et!</p>
+
+<h1 id="heading_1">Heading2</h1>
+<img src="images/1.png">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea deserunt, officiis adipisci rerum voluptatum obcaecati quam cum autem nostrum eveniet reiciendis
+vero tempore sequi magnam fugit dicta laborum earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cum aliquam ab, consequuntur corrupti quia tenetur excepturi voluptates a sint totam quos 
+unde magni sequi est natus deleniti nobis  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis laudantium, optio quas suscipit expedita iusto dolores at labore ab quaerat, libero voluptatem ipsum, molestias
+similique et earum cupiditate qui voluptate?et!</p>
+
+<h1 id="heading_1">Heading3</h1>
+<img src="images/1.png">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea deserunt, officiis adipisci rerum voluptatum obcaecati quam cum autem nostrum eveniet reiciendis
+vero tempore sequi magnam fugit dicta laborum earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cum aliquam ab, consequuntur corrupti quia tenetur excepturi voluptates a sint totam quos 
+unde magni sequi est natus deleniti nobis  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis laudantium, optio quas suscipit expedita iusto dolores at labore ab quaerat, libero voluptatem ipsum, molestias
+similique et earum cupiditate qui voluptate?et!</p>
 </body>
 
 
