--- a/mod5/index.html
+++ b/mod5/index.html
@@ -34,7 +34,7 @@
     <td>11</td>
     <td>buna@gmail.com</td>
 </tr>
-</body>
+
 </tbody>
 
 <tfoot>
@@ -62,6 +62,38 @@
     <td>euron@gmail.com</td>
 </tr>
 </table>
+<br> 
+
+<ul type="circle">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+</ul>
+
+<ol type="A" start="50">
+    <li>PHP</li>
+    <li>Python</li>
+    <li>C#</li>
+
+</ol>
+<ol type="I">
+    <li>PHP</li>
+    <li>Python</li>
+    <li>C#</li>
+
+</ol>
+
+
+
+
+
+<dl>
+    <dt>NIveli 1</dt>
+    <dd>Code1,Code2,Code3</dd>
+
+    <dt>Niveli2</dt>
+    <dd>HTML,CSS,JAVASCRIPT</dd>
+</dl>
 
 
 
@@ -79,9 +111,6 @@
 
 
 
-
-
-
-
+</body>
 
 </html>
